--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "elm": "^0.19.1-5",
     "vite": "^2.8.4",
     "vite-plugin-elm": "^2.5.1"
   }
