--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,10 +21,12 @@ jobs:
     - name: Install and Build 🔧
       run: |
         npm ci
-        npm run build-gh-pages
+        npm run build
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4.2.5
       with:
         branch: gh-pages
-        folder: dist
+        folder: build
+        clean: true
+        clean-exclude: .nojekyll
