--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "serve": "vite",
-    "build": "vite build",
-    "build-gh-pages": "vite build && touch $PWD/dist/.nojekyll"
+    "build": "vite build --outDir build --emptyOutDir"
   },
   "devDependencies": {
     "elm": "^0.19.1-5",
